--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sellfazz-ts-redux-wrapper",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "author": "Nandi <nandirasp@sellfazz.com>",
+  "author": "Nandi <nandirasp@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "jest --config jestconfig.json",
